Fix bug where if the title was too long the delete button would disappear

--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,7 @@ html, body {
 	font-family: sans-serif;
 	font-size: 24px;
 	padding: 10px;
+	overflow: hidden;
 }
 
 .book-card-top-container p {
